# VitaBreak

./: .gitignore  BUILD_TEST.md  CLAUDE.md  CMakeLists.txt  PORTMASTER.md  README.md  STAGE1_CHECKLIST.md  build-portmaster.sh  package-portmaster.sh
.github/: RELEASE.md  SETUP_PAT.md
.github/workflows/: auto-tag.yml  ci.yml  deploy-pages.yml  release.yml
.specify/memory/: constitution.md
build-vita/: BreakOut  BreakOut.self.out  BreakOut.vpk.out  BreakOut.vpk_param.sfo
build-wasm/: BreakOut.html
cmake/: mingw-w64-x86_64.cmake
portmaster/: BreakOut.sh  port.json
specs/001-we-re-going/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.c
src/game/: ball.c  ball.h  brick.c  brick.h  collision.c  collision.h  paddle.c  paddle.h  score.c  score.h  stage.c  stage.h
src/states/: game_state.c  game_state.h
src/systems/: text.c  text.h
